--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -162,7 +162,8 @@
     <div class="col-xl-1"></div>
   </div>
 
-  <a type="submit" id="printPDF" class="btn btn-primary">print</a>
+  <a type="submit" id="printPDF1" class="btn btn-info">print</a>
+   <a type="submit" id="printPDF2" class="btn btn-info">print</a>
 
 
 
