--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -4,22 +4,30 @@
   <div class="row text-center">
     <div class="col-xl-1"></div>
     <div class="col-xl-10">
-      <p>{{name}} {{description}}</p>
+      <h3><strong>{{name}} {{description}}</strong></h3>
     </div>
   </div>
 
   <div class="row text-center">
-    <div class="col-xl-1"></div>
+    <div class="col-xl-3"></div>
+    <div class="col-xl-2">
+      <p>{{phone}}</p>
+    </div>
     <div class="col-xl-4">
-      <p>Phone: {{phone}} {{description}}</p>
+      <p>{{address}}</p>
     </div>
-    <div class="col-xl-6">
-      <p>Adress: {{address}}</p>
+    <div class="col-xl-3"></div>
+  </div>
+ {{/each}}
+
+  <div class="row text-center">
+    <div class="col-xl-12">
+      <p>{{data.email}}</p>
     </div>
-    <div class="col-xl-1"></div>
+
   </div>
 
-  {{/each}}
+ 
   <hr>
   <div class="row mb-4">
     <div class="col-xl-1"></div>
@@ -163,7 +171,7 @@
   </div>
 
   <a type="submit" id="printPDF1" class="btn btn-info">print</a>
-   <a type="submit" id="printPDF2" class="btn btn-info">print</a>
+  <a type="submit" id="printPDF2" class="btn btn-info">print</a>
 
 
 
