--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -5,6 +5,7 @@
         <a class="p-2 text-dark" href="/">Home</a>
         {{#if isAuthenticated}}
         <a class="p-2 text-dark" href="/profile">Profile</a>
+        <a class="p-2 text-dark" href="/print">Preview</a>
         <a class="p-2 text-dark" href="/logout">Logout</a>
         {{else }}
         <a class="p-2 text-dark" href="/register">Register</a>
