--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container border border-dark p-5">
 
   {{#each data.GeneralInfos}}
   <div class="row text-center">
@@ -169,10 +169,8 @@
     </div>
     <div class="col-xl-1"></div>
   </div>
-
-  <a type="submit" id="printPDF1" class="btn btn-info">print</a>
-  <a type="submit" id="printPDF2" class="btn btn-info">print</a>
-
-
-
 </div>
+<div class="container text-center p-5">
+  <button href="#" type="submit" id="printPDF1" class="btn btn-dark">Version #1</button>
+  <button href="#" type="submit" id="printPDF2" class="btn btn-info">Version #2</button>
+  </div>
