--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -423,7 +423,7 @@
     </div>
     <div class="row">
             <div class="form-group col-sm-12 col-md-12 col-lg-12 my-3">
-                <a type="submit" id="printPDF" class="btn btn-primary waves-effect waves-light btn-block aqua-gradient btn-lg">Print PDF</a>
+                <a type="submit" href="/print" id="printPDFPage" class="btn btn-primary waves-effect waves-light btn-block aqua-gradient btn-lg">Print PDF</a>
             </div>
         </div>
 
